force-app/main/default/objects/Device_Exception__c/Device_Exception__c.object-meta.xml
<CustomObject>
    <label>Device Exception</label>
    <nameField>
        <displayFormat>DE-{0000}</displayFormat>
        <label>Device Exception No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Device Exceptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>