force-app/main/default/objects/Device_Exception__c/fields/Alarm_Message__c.field-meta.xml
<CustomField>
    <fullName>Alarm_Message__c</fullName>
    <label>Alarm Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>