force-app/main/default/objects/Device_Exception__c/fields/AlarmID__c.field-meta.xml
<CustomField>
    <fullName>AlarmID__c</fullName>
    <label>AlarmID</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>