force-app/main/default/objects/Device_Exception__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Device Exceptions</relationshipLabel>
    <relationshipName>Device_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>