force-app/main/default/objects/Device_Exception__c/fields/DeviceID__c.field-meta.xml
<CustomField>
    <fullName>DeviceID__c</fullName>
    <label>DeviceID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>