force-app/main/default/objects/Device_Exception__c/fields/Measure_2__c.field-meta.xml
<CustomField>
    <fullName>Measure_2__c</fullName>
    <label>Measure 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>