force-app/main/default/objects/Device_Exception__c/fields/Signal_Emitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Signal_Emitted_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Signal Emitted Date</label>
    <type>DateTime</type>
</CustomField>