force-app/main/default/objects/Device_Exception__c/fields/Signal_Type__c.field-meta.xml
<CustomField>
    <fullName>Signal_Type__c</fullName>
    <label>Signal Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>